更新规则，添加独立的openAI分流，并且develop也含有openAI

--- a/MyConvert/MyRules.ini
+++ b/MyConvert/MyRules.ini
@@ -4,6 +4,7 @@
 ; 规则组
 ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Direct.yaml,86400
+ruleset=OpenAI,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/OpenAI.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Microsoft.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Game.yaml,86400
@@ -23,6 +24,7 @@ ruleset=Others,[]MATCH
 ; 规则组节点
 custom_proxy_group=Proxy`select`[]Fallback`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
+custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=Bilibili`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
