--- a/Rules_Convert/Complete/Complete.ini
+++ b/Rules_Convert/Complete/Complete.ini
@@ -8,6 +8,8 @@ ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zz
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/Other/LAN.yaml,86400
 ; Special
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/Other/Special.yaml,86400
+; OpenAI
+ruleset=OpenAI,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/Other/OpenAI.yaml,86400
 ; Developer
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/Other/Developer.yaml,86400
 ; Apple
@@ -120,6 +122,7 @@ ruleset=Others,[]MATCH
 custom_proxy_group=Proxy`select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
+custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=Bilibili`select`[]MainlandMedia`[]DIRECT`(HKT|HK|TW|台湾|香港|澳门)
 custom_proxy_group=MainlandMedia`select[]DIRECT`[]Proxy
