--- a/Rules_Convert/Integrate/Integrate.ini
+++ b/Rules_Convert/Integrate/Integrate.ini
@@ -4,6 +4,7 @@
 ; 规则组
 ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Direct.yaml,86400
+ruleset=OpenAI,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/OpenAI.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Microsoft.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Game.yaml,86400
@@ -24,6 +25,7 @@ ruleset=Others,[]MATCH
 custom_proxy_group=Proxy`select`[]Fallback`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
+custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=Bilibili`select`[]DIRECT`(HKT|HK|TW)
 
