--- a/Rules_Provider/Integrate/MainlandMediaNoBilibili.yaml
+++ b/Rules_Provider/Integrate/MainlandMediaNoBilibili.yaml
@@ -104,10 +104,6 @@ payload:
   - DOMAIN-SUFFIX,gitv.cn
   - DOMAIN-SUFFIX,gitv.tv
   - DOMAIN-SUFFIX,ibkstore.com
-  - DOMAIN-SUFFIX,inter.iqiyi.com
-  - DOMAIN-SUFFIX,intl-rcd.iqiyi.com
-  - DOMAIN-SUFFIX,intl-subscription.iqiyi.com
-  - DOMAIN-SUFFIX,intl.iqiyi.com
   - DOMAIN-SUFFIX,iq.com
   - DOMAIN-SUFFIX,iqiyi.com
   - DOMAIN-SUFFIX,iqiyi.demo.uwp
@@ -129,41 +125,28 @@ payload:
   - DOMAIN-SUFFIX,qy.com
   - DOMAIN-SUFFIX,qy.net
   - DOMAIN-SUFFIX,suike.cn
-  - DOMAIN,cache.video.iqiyi.com
   - IP-CIDR,101.224.0.0/13
   - IP-CIDR,103.44.56.0/22
   - IP-CIDR,103.5.34.153/32
   - IP-CIDR,104.109.129.153/32
-  - IP-CIDR,104.85.165.17/32
   - IP-CIDR,110.238.107.47/32
   - IP-CIDR,118.26.120.0/24
   - IP-CIDR,118.26.32.0/23
-  - IP-CIDR,118.26.32.162/32
   - IP-CIDR,119.176.0.0/12
-  - IP-CIDR,159.138.102.146/32
-  - IP-CIDR,184.51.102.0/24
   - IP-CIDR,203.211.4.169/32
   - IP-CIDR,203.211.4.193/32
   - IP-CIDR,203.74.95.131/32
   - IP-CIDR,203.74.95.139/32
   - IP-CIDR,203.74.95.153/32
-  - IP-CIDR,203.80.97.203/32
   - IP-CIDR,210.201.32.11/32
   - IP-CIDR,210.201.32.8/32
   - IP-CIDR,210.71.227.200/32
   - IP-CIDR,210.71.227.202/32
-  - IP-CIDR,23.200.145.146/32
-  - IP-CIDR,23.210.215.186/32
-  - IP-CIDR,23.211.15.0/24
   - IP-CIDR,23.211.15.99/32
-  - IP-CIDR,23.219.172.0/24
   - IP-CIDR,23.40.241.251/32
   - IP-CIDR,23.40.242.10/32
   - IP-CIDR,23.53.32.88/32
-  - IP-CIDR,23.59.252.0/24
-  - PROCESS-NAME,com.iqiyi.i18n
-  - PROCESS-NAME,com.iqiyi.i18n.tv
-  - PROCESS-NAME,com.qiyi.video
+  - PROCESS-NAME,com.qiyi.vid
 # > 乐视
   - DOMAIN-SUFFIX,le.com
   - DOMAIN-SUFFIX,lecloud.com
@@ -188,6 +171,7 @@ payload:
   - DOMAIN-SUFFIX,music.126.net
   - DOMAIN-SUFFIX,music.163.com
   - DOMAIN-SUFFIX,music.163.com.163jiasu.com
+  - DOMAIN-SUFFIX,yun-app.net
   - DOMAIN,iadmat.nosdn.127.net
   - DOMAIN,netease.ugcvideoss.ourdvs.com
   - IP-CIDR,101.71.154.241/32
