--- a/Rules_Parsers/Integrate/AddProxyGroups.yaml
+++ b/Rules_Parsers/Integrate/AddProxyGroups.yaml
@@ -26,6 +26,13 @@ prepend-proxy-groups:
       - Proxy
     url: http://cp.cloudflare.com/generate_204
     interval: 600
+  - name: OpenAI
+    type: select
+    proxies:
+      - Proxy
+      - DIRECT
+    url: http://cp.cloudflare.com/generate_204
+    interval: 600
   - name: Others
     type: select
     proxies:
