--- a/Rules_Provider/Complete/GlobalMedia/AppleMusic.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/AppleMusic.yaml
@@ -10,4 +10,4 @@ payload:
   - DOMAIN,audio.itunes.apple.com
   - DOMAIN,mvod.itunes.apple.com
   - DOMAIN,streamingaudio.itunes.apple.com
-  - PROCESS-NAME,music
+  - PROCESS-NAME,Music
