--- a/Rules_Provider/Complete/GlobalMedia/AppleTV.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/AppleTV.yaml
@@ -1,11 +1,11 @@
 # > AppleTV
 # 总条数: 8条
 payload:
-  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN-SUFFIX,tv.apple.com
+  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN,hls.itunes.apple.com
   - DOMAIN,np-edge.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
   - DOMAIN,tv.applemusic.com
   - DOMAIN,uts-api.itunes.apple.com
-  - PROCESS-NAME,tv
+  - PROCESS-NAME,TV
