--- a/Rules_Provider/Complete/GlobalMedia/Twitch.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/Twitch.yaml
@@ -1,9 +1,10 @@
 # > Twitch
-# 总条数: 21条
+# 总条数: 22条
 payload:
-  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-KEYWORD,ttvnw
+  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-SUFFIX,jtvnw.net
+  - DOMAIN-SUFFIX,live-video.net
   - DOMAIN-SUFFIX,ttvnw.net
   - DOMAIN-SUFFIX,twitch-ext.rootonline.de
   - DOMAIN-SUFFIX,twitch.tv
