--- a/Rules_Provider/Complete/Other/Telegram.yaml
+++ b/Rules_Provider/Complete/Other/Telegram.yaml
@@ -2,10 +2,10 @@
 # 总条数: 43条
 payload:
   - DOMAIN-KEYWORD,nicegram
-  - DOMAIN-KEYWORD,telegram
   - DOMAIN-SUFFIX,comments.app
   - DOMAIN-SUFFIX,contest.com
   - DOMAIN-SUFFIX,graph.org
+  - DOMAIN-SUFFIX,mbrx.app
   - DOMAIN-SUFFIX,quiz.directory
   - DOMAIN-SUFFIX,stel.com
   - DOMAIN-SUFFIX,t.me
@@ -24,23 +24,14 @@ payload:
   - DOMAIN-SUFFIX,usercontent.dev
   - IP-CIDR,109.239.140.0/24
   - IP-CIDR,149.154.160.0/20
-  - IP-CIDR,185.76.151.0/24
   - IP-CIDR,5.28.195.163/32
   - IP-CIDR,5.28.195.205/32
-  - IP-CIDR,91.105.192.0/23
   - IP-CIDR,91.108.0.0/16
-  - IP-CIDR,91.108.12.0/22
-  - IP-CIDR,91.108.16.0/22
-  - IP-CIDR,91.108.4.0/22
-  - IP-CIDR,91.108.56.0/22
-  - IP-CIDR,91.108.8.0/22
-  - IP-CIDR,95.161.64.0/20
   - IP-CIDR6,2001:67c:4e8::/48
   - IP-CIDR6,2001:b28:f23c::/47
-  - IP-CIDR6,2001:b28:f23c::/48
-  - IP-CIDR6,2001:b28:f23d::/48
   - IP-CIDR6,2001:b28:f23f::/48
   - IP-CIDR6,2a0a:f280::/32
   - PROCESS-NAME,nekox.messenger
   - PROCESS-NAME,org.telegram.messenger
-  - PROCESS-NAME,telegram.exe
+  - PROCESS-NAME,telegram-desktop
+  - PROCESS-NAME,Telegram.exe
