--- a/Rules_Provider/Integrate/GlobalMediaNoNetflix.yaml
+++ b/Rules_Provider/Integrate/GlobalMediaNoNetflix.yaml
@@ -112,10 +112,10 @@ payload:
   - DOMAIN,audio.itunes.apple.com
   - DOMAIN,mvod.itunes.apple.com
   - DOMAIN,streamingaudio.itunes.apple.com
-  - PROCESS-NAME,music
+  - PROCESS-NAME,Music
 # > AppleNews
-  - DOMAIN,apple.comscoreresearch.com
   - DOMAIN-SUFFIX,apple.news
+  - DOMAIN,apple.comscoreresearch.com
   - DOMAIN,gateway.icloud.com
   - DOMAIN,gspe1-ssl.ls.apple.com
   - DOMAIN,news-assets.apple.com
@@ -123,16 +123,16 @@ payload:
   - DOMAIN,news-client.apple.com
   - DOMAIN,news-edge.apple.com
   - DOMAIN,news-events.apple.com
-  - PROCESS-NAME,news
+  - PROCESS-NAME,News
 # > AppleTV
-  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN-SUFFIX,tv.apple.com
+  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN,hls.itunes.apple.com
   - DOMAIN,np-edge.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
   - DOMAIN,tv.applemusic.com
   - DOMAIN,uts-api.itunes.apple.com
-  - PROCESS-NAME,tv
+  - PROCESS-NAME,TV
 # > Bahamut
   - DOMAIN-SUFFIX,bahamut.akamaized.net
   - DOMAIN-SUFFIX,bahamut.com.tw
@@ -889,9 +889,9 @@ payload:
   - DOMAIN-SUFFIX,wwwhuluplus.com
   - PROCESS-NAME,com.hulu.plus
 # > Japonx
-  - DOMAIN-SUFFIX,japonx.com
   - DOMAIN-KEYWORD,japonx
   - DOMAIN-KEYWORD,japronx
+  - DOMAIN-SUFFIX,japonx.com
   - DOMAIN-SUFFIX,japonx.net
   - DOMAIN-SUFFIX,japonx.tv
   - DOMAIN-SUFFIX,japonx.vip
@@ -1046,9 +1046,10 @@ payload:
   - DOMAIN,p16-tiktokcdn-com.akamaized.net
   - PROCESS-NAME,com.zhiliaoapp.musically
 # > Twitch
-  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-KEYWORD,ttvnw
+  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-SUFFIX,jtvnw.net
+  - DOMAIN-SUFFIX,live-video.net
   - DOMAIN-SUFFIX,ttvnw.net
   - DOMAIN-SUFFIX,twitch-ext.rootonline.de
   - DOMAIN-SUFFIX,twitch.tv
