--- a/Rules_Provider/Integrate/GlobalMediaNoSpotify.yaml
+++ b/Rules_Provider/Integrate/GlobalMediaNoSpotify.yaml
@@ -112,10 +112,10 @@ payload:
   - DOMAIN,audio.itunes.apple.com
   - DOMAIN,mvod.itunes.apple.com
   - DOMAIN,streamingaudio.itunes.apple.com
-  - PROCESS-NAME,music
+  - PROCESS-NAME,Music
 # > AppleNews
-  - DOMAIN,apple.comscoreresearch.com
   - DOMAIN-SUFFIX,apple.news
+  - DOMAIN,apple.comscoreresearch.com
   - DOMAIN,gateway.icloud.com
   - DOMAIN,gspe1-ssl.ls.apple.com
   - DOMAIN,news-assets.apple.com
@@ -123,16 +123,16 @@ payload:
   - DOMAIN,news-client.apple.com
   - DOMAIN,news-edge.apple.com
   - DOMAIN,news-events.apple.com
-  - PROCESS-NAME,news
+  - PROCESS-NAME,News
 # > AppleTV
-  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN-SUFFIX,tv.apple.com
+  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN,hls.itunes.apple.com
   - DOMAIN,np-edge.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
   - DOMAIN,tv.applemusic.com
   - DOMAIN,uts-api.itunes.apple.com
-  - PROCESS-NAME,tv
+  - PROCESS-NAME,TV
 # > Bahamut
   - DOMAIN-SUFFIX,bahamut.akamaized.net
   - DOMAIN-SUFFIX,bahamut.com.tw
@@ -889,9 +889,9 @@ payload:
   - DOMAIN-SUFFIX,wwwhuluplus.com
   - PROCESS-NAME,com.hulu.plus
 # > Japonx
-  - DOMAIN-SUFFIX,japonx.com
   - DOMAIN-KEYWORD,japonx
   - DOMAIN-KEYWORD,japronx
+  - DOMAIN-SUFFIX,japonx.com
   - DOMAIN-SUFFIX,japonx.net
   - DOMAIN-SUFFIX,japonx.tv
   - DOMAIN-SUFFIX,japonx.vip
@@ -936,7 +936,6 @@ payload:
   - DOMAIN,mytvsuperlimited.hb.omtrdc.net
   - DOMAIN,mytvsuperlimited.sc.omtrdc.net
 # > Netflix
-  - DOMAIN,e13252.dscg.akamaiedge.net
   - DOMAIN-KEYWORD,apiproxy-device-prod-nlb-
   - DOMAIN-KEYWORD,dualstack.apiproxy-
   - DOMAIN-KEYWORD,dualstack.ichnaea-web-
@@ -969,6 +968,7 @@ payload:
   - DOMAIN-SUFFIX,nflxso.net
   - DOMAIN-SUFFIX,nflxvideo.net
   - DOMAIN-SUFFIX,us-west-2.amazonaws.com
+  - DOMAIN,e13252.dscg.akamaiedge.net
   - DOMAIN,h-netflix.online-metrix.net
   - DOMAIN,netflix.com.edgesuite.net
   - IP-CIDR,103.87.204.0/22
@@ -996,6 +996,7 @@ payload:
   - IP-CIDR,13.126.243.0/24
   - IP-CIDR,13.127.70.128/27
   - IP-CIDR,13.127.70.160/29
+  - IP-CIDR,13.200.7.128/28
   - IP-CIDR,13.208.131.0/27
   - IP-CIDR,13.208.131.128/26
   - IP-CIDR,13.208.131.192/27
@@ -1108,8 +1109,10 @@ payload:
   - IP-CIDR,13.36.84.64/28
   - IP-CIDR,13.38.132.0/22
   - IP-CIDR,13.38.140.0/23
+  - IP-CIDR,13.39.141.160/28
   - IP-CIDR,13.40.202.0/23
   - IP-CIDR,13.40.204.0/22
+  - IP-CIDR,13.42.133.192/28
   - IP-CIDR,13.48.186.128/26
   - IP-CIDR,13.48.32.0/24
   - IP-CIDR,13.48.4.128/27
@@ -1121,6 +1124,8 @@ payload:
   - IP-CIDR,13.48.74.0/24
   - IP-CIDR,13.49.253.224/27
   - IP-CIDR,13.49.42.0/23
+  - IP-CIDR,13.50.179.168/29
+  - IP-CIDR,13.50.179.176/29
   - IP-CIDR,13.51.120.0/24
   - IP-CIDR,13.51.253.80/29
   - IP-CIDR,13.51.29.0/26
@@ -1236,6 +1241,7 @@ payload:
   - IP-CIDR,15.228.72.64/26
   - IP-CIDR,15.228.92.192/26
   - IP-CIDR,15.228.97.0/24
+  - IP-CIDR,15.229.120.48/28
   - IP-CIDR,15.229.36.0/23
   - IP-CIDR,15.229.40.0/23
   - IP-CIDR,15.236.80.0/23
@@ -1254,12 +1260,14 @@ payload:
   - IP-CIDR,16.50.67.0/25
   - IP-CIDR,16.50.67.128/26
   - IP-CIDR,16.50.69.192/27
+  - IP-CIDR,16.62.188.224/28
   - IP-CIDR,16.62.54.0/25
   - IP-CIDR,16.62.56.224/27
   - IP-CIDR,16.62.7.192/26
   - IP-CIDR,160.1.128.0/24
   - IP-CIDR,176.34.159.192/26
   - IP-CIDR,177.71.207.128/26
+  - IP-CIDR,18.100.209.192/28
   - IP-CIDR,18.100.64.128/25
   - IP-CIDR,18.100.65.0/26
   - IP-CIDR,18.102.2.0/23
@@ -1283,6 +1291,8 @@ payload:
   - IP-CIDR,18.141.154.0/23
   - IP-CIDR,18.141.238.68/30
   - IP-CIDR,18.141.66.248/29
+  - IP-CIDR,18.143.206.152/29
+  - IP-CIDR,18.143.206.160/29
   - IP-CIDR,18.144.158.0/27
   - IP-CIDR,18.144.184.0/23
   - IP-CIDR,18.144.76.128/25
@@ -1368,6 +1378,8 @@ payload:
   - IP-CIDR,18.232.1.64/26
   - IP-CIDR,18.236.61.0/25
   - IP-CIDR,18.237.140.160/29
+  - IP-CIDR,18.246.107.128/29
+  - IP-CIDR,18.246.107.8/29
   - IP-CIDR,18.252.145.156/30
   - IP-CIDR,18.252.145.160/28
   - IP-CIDR,18.252.145.192/27
@@ -1376,10 +1388,13 @@ payload:
   - IP-CIDR,18.252.4.16/29
   - IP-CIDR,18.252.56.0/23
   - IP-CIDR,18.253.186.0/24
+  - IP-CIDR,18.254.140.0/22
+  - IP-CIDR,18.254.148.0/22
   - IP-CIDR,18.254.68.0/23
   - IP-CIDR,18.60.64.192/26
   - IP-CIDR,18.60.68.0/25
   - IP-CIDR,18.60.78.192/27
+  - IP-CIDR,18.60.78.240/28
   - IP-CIDR,185.2.220.0/22
   - IP-CIDR,185.9.188.0/22
   - IP-CIDR,192.173.64.0/18
@@ -1427,6 +1442,7 @@ payload:
   - IP-CIDR,3.101.202.0/23
   - IP-CIDR,3.101.208.0/24
   - IP-CIDR,3.101.209.0/26
+  - IP-CIDR,3.101.226.80/28
   - IP-CIDR,3.101.52.208/29
   - IP-CIDR,3.105.172.0/22
   - IP-CIDR,3.105.5.0/26
@@ -1470,10 +1486,13 @@ payload:
   - IP-CIDR,3.141.102.192/30
   - IP-CIDR,3.141.102.208/28
   - IP-CIDR,3.141.102.224/28
+  - IP-CIDR,3.141.252.0/22
+  - IP-CIDR,3.142.0.0/21
   - IP-CIDR,3.143.206.104/29
   - IP-CIDR,3.144.141.192/26
   - IP-CIDR,3.145.220.0/22
   - IP-CIDR,3.145.230.0/24
+  - IP-CIDR,3.145.246.48/28
   - IP-CIDR,3.145.31.0/26
   - IP-CIDR,3.15.35.0/24
   - IP-CIDR,3.15.36.0/26
@@ -1526,32 +1545,14 @@ payload:
   - IP-CIDR,3.238.178.104/29
   - IP-CIDR,3.238.178.112/29
   - IP-CIDR,3.238.178.120/31
-  - IP-CIDR,3.238.178.128/27
-  - IP-CIDR,3.238.178.160/29
-  - IP-CIDR,3.238.178.168/30
-  - IP-CIDR,3.238.178.197/32
-  - IP-CIDR,3.238.178.198/31
-  - IP-CIDR,3.238.178.200/29
-  - IP-CIDR,3.238.178.208/28
-  - IP-CIDR,3.238.178.224/27
+  - IP-CIDR,3.238.178.128/25
   - IP-CIDR,3.238.207.0/26
   - IP-CIDR,3.238.207.128/25
   - IP-CIDR,3.238.208.0/23
   - IP-CIDR,3.238.210.0/25
   - IP-CIDR,3.238.212.0/22
   - IP-CIDR,3.238.216.128/25
-  - IP-CIDR,3.239.152.0/31
-  - IP-CIDR,3.239.152.12/31
-  - IP-CIDR,3.239.152.128/29
-  - IP-CIDR,3.239.152.136/31
-  - IP-CIDR,3.239.152.46/31
-  - IP-CIDR,3.239.152.48/28
-  - IP-CIDR,3.239.152.5/32
-  - IP-CIDR,3.239.152.6/31
-  - IP-CIDR,3.239.152.64/26
-  - IP-CIDR,3.239.152.8/30
-  - IP-CIDR,3.239.153.0/24
-  - IP-CIDR,3.239.154.0/23
+  - IP-CIDR,3.239.152.0/22
   - IP-CIDR,3.239.156.0/31
   - IP-CIDR,3.239.156.10/31
   - IP-CIDR,3.239.156.100/30
@@ -1606,6 +1607,10 @@ payload:
   - IP-CIDR,3.251.95.96/27
   - IP-CIDR,3.253.134.0/23
   - IP-CIDR,3.253.148.0/22
+  - IP-CIDR,3.253.174.0/23
+  - IP-CIDR,3.253.184.0/22
+  - IP-CIDR,3.253.188.0/24
+  - IP-CIDR,3.253.189.64/28
   - IP-CIDR,3.26.109.216/30
   - IP-CIDR,3.26.127.24/29
   - IP-CIDR,3.26.138.0/23
@@ -1618,6 +1623,7 @@ payload:
   - IP-CIDR,3.26.83.0/24
   - IP-CIDR,3.26.84.0/22
   - IP-CIDR,3.26.88.0/27
+  - IP-CIDR,3.27.127.176/28
   - IP-CIDR,3.28.255.80/28
   - IP-CIDR,3.28.63.128/25
   - IP-CIDR,3.28.65.0/26
@@ -1664,6 +1670,8 @@ payload:
   - IP-CIDR,3.64.1.192/28
   - IP-CIDR,3.64.226.232/29
   - IP-CIDR,3.64.226.240/30
+  - IP-CIDR,3.65.124.0/22
+  - IP-CIDR,3.65.128.0/21
   - IP-CIDR,3.65.246.0/27
   - IP-CIDR,3.66.172.0/24
   - IP-CIDR,3.68.251.176/30
@@ -1677,6 +1685,7 @@ payload:
   - IP-CIDR,3.71.120.0/22
   - IP-CIDR,3.72.168.0/24
   - IP-CIDR,3.72.33.128/25
+  - IP-CIDR,3.77.79.224/28
   - IP-CIDR,3.8.37.24/29
   - IP-CIDR,3.8.37.96/27
   - IP-CIDR,3.9.159.64/29
@@ -1769,9 +1778,11 @@ payload:
   - IP-CIDR,35.72.36.144/29
   - IP-CIDR,35.72.36.192/26
   - IP-CIDR,35.72.37.0/24
+  - IP-CIDR,35.73.0.0/22
   - IP-CIDR,35.73.115.0/28
   - IP-CIDR,35.73.115.128/25
   - IP-CIDR,35.73.4.0/24
+  - IP-CIDR,35.73.8.0/22
   - IP-CIDR,35.74.77.240/30
   - IP-CIDR,35.75.130.0/24
   - IP-CIDR,35.75.131.0/26
@@ -1790,6 +1801,10 @@ payload:
   - IP-CIDR,35.93.124.0/22
   - IP-CIDR,37.77.184.0/21
   - IP-CIDR,38.72.126.0/24
+  - IP-CIDR,43.201.155.152/29
+  - IP-CIDR,43.201.155.160/29
+  - IP-CIDR,43.207.179.168/29
+  - IP-CIDR,43.207.179.176/29
   - IP-CIDR,43.218.56.128/25
   - IP-CIDR,43.218.56.64/26
   - IP-CIDR,43.218.71.0/26
@@ -1806,6 +1821,8 @@ payload:
   - IP-CIDR,44.210.64.0/22
   - IP-CIDR,44.212.176.0/21
   - IP-CIDR,44.214.144.0/20
+  - IP-CIDR,44.216.41.152/29
+  - IP-CIDR,44.216.41.160/29
   - IP-CIDR,44.224.0.0/16
   - IP-CIDR,44.227.178.0/24
   - IP-CIDR,44.230.0.0/16
@@ -1961,7 +1978,7 @@ payload:
   - IP-CIDR6,2620:10c:7000::/44
   - IP-CIDR6,2a00:86c0::/32
   - IP-CIDR6,2a03:5640::/32
-  - PROCESS-NAME,com.netflix.mediaclient
+  - PROCESS-NAME,com.netflix.mediacl
 # > Niconico
   - DOMAIN-SUFFIX,dmc.nico
   - DOMAIN-SUFFIX,nicodic.jp
@@ -2043,9 +2060,10 @@ payload:
   - DOMAIN,p16-tiktokcdn-com.akamaized.net
   - PROCESS-NAME,com.zhiliaoapp.musically
 # > Twitch
-  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-KEYWORD,ttvnw
+  - DOMAIN-SUFFIX,ext-twitch.tv
   - DOMAIN-SUFFIX,jtvnw.net
+  - DOMAIN-SUFFIX,live-video.net
   - DOMAIN-SUFFIX,ttvnw.net
   - DOMAIN-SUFFIX,twitch-ext.rootonline.de
   - DOMAIN-SUFFIX,twitch.tv
