--- a/config.yaml
+++ b/config.yaml
@@ -486,6 +486,13 @@ proxy-groups:
       - Proxy
     url: http://cp.cloudflare.com/generate_204
     interval: 600
+  - name: OpenAI
+    type: select
+    proxies:
+      - Proxy
+      - DIRECT
+    url: http://cp.cloudflare.com/generate_204
+    interval: 600    
   - name: Others
     type: select
     proxies:
@@ -571,7 +578,7 @@ rules:
   - RULE-SET,Reject,AdBlock
   # - GEOSITE,category-ads-all,AdBlock
   - RULE-SET,Direct,DIRECT
-
+  - RULE-SET,OpenAI,OpenAI
   - RULE-SET,Apple,AppleAndMicrosoft
   - RULE-SET,Microsoft,AppleAndMicrosoft
   - RULE-SET,PayPal,GameAndPayPal
@@ -592,6 +599,12 @@ rules:
   - MATCH,Others
 
 rule-providers:
+  OpenAI:
+    behavior: classical
+    interval: 86400
+    path: ./Rules/OpenAI
+    type: http
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/OpenAI.yaml'
   Direct:
     behavior: classical
     interval: 86400
