--- a/Rules_Provider/Rules_Integrate.yaml
+++ b/Rules_Provider/Rules_Integrate.yaml
@@ -3,6 +3,7 @@ rules:
   # - GEOSITE,category-ads-all,AdBlock
   - RULE-SET,Direct,DIRECT
 
+  - RULE-SET,OpenAI,OpenAI
   - RULE-SET,Apple,AppleAndMicrosoft
   - RULE-SET,Microsoft,AppleAndMicrosoft
   - RULE-SET,PayPal,GameAndPayPal
@@ -35,6 +36,12 @@ rule-providers:
     path: ./Rules/Domestic
     type: http
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Domestic.yaml'
+  OpenAI:
+    behavior: classical
+    interval: 86400
+    path: ./Rules/OpenAI
+    type: http
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/OpenAI.yaml'
   Game:
     behavior: classical
     interval: 86400
