--- a/MyConvert/MyRules.ini
+++ b/MyConvert/MyRules.ini
@@ -2,21 +2,21 @@
 ;不要随意改变关键字，否则会导致出错
 
 ; 规则组
-ruleset=AdBlock,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Reject.yaml,86400
-ruleset=DIRECT,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Direct.yaml,86400
-ruleset=OpenAI,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/OpenAI.yaml,86400
-ruleset=AppleAndMicrosoft,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Apple.yaml,86400
-ruleset=AppleAndMicrosoft,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Microsoft.yaml,86400
-ruleset=GameAndPayPal,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Game.yaml,86400
-ruleset=GameAndPayPal,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/PayPal.yaml,86400
-ruleset=YouTube,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/GlobalMedia/YouTube.yaml,86400
-ruleset=GlobalMedia,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/GlobalMediaNoYoutube.yaml,86400
-ruleset=Bilibili,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Complete/MainlandMedia/Bilibili.yaml,86400
-ruleset=Domestic,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/MainlandMediaNoBilibili.yaml,86400
+ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
+ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Direct.yaml,86400
+ruleset=OpenAI,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/OpenAI.yaml,86400
+ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Apple.yaml,86400
+ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Microsoft.yaml,86400
+ruleset=GameAndPayPal,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Game.yaml,86400
+ruleset=GameAndPayPal,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/PayPal.yaml,86400
+ruleset=YouTube,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Complete/GlobalMedia/YouTube.yaml,86400
+ruleset=GlobalMedia,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/GlobalMediaNoYoutube.yaml,86400
+ruleset=Bilibili,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Complete/MainlandMedia/Bilibili.yaml,86400
+ruleset=Domestic,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/MainlandMediaNoBilibili.yaml,86400
 
-ruleset=Proxy,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Proxy.yaml,86400
-ruleset=SpeedTest,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/SpeedTest.yaml,86400
-ruleset=Domestic,clash-classic:https://github.com/zzcabc/Rules/blob/master/Rules_Provider/Integrate/Domestic.yaml,86400
+ruleset=Proxy,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Proxy.yaml,86400
+ruleset=SpeedTest,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/SpeedTest.yaml,86400
+ruleset=Domestic,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Domestic.yaml,86400
 ruleset=Domestic,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
