--- a/Rules_Provider/Complete/Game/Blizzard.yaml
+++ b/Rules_Provider/Complete/Game/Blizzard.yaml
@@ -59,7 +59,7 @@ payload:
   - IP-CIDR,211.234.110.1/32
   - IP-CIDR,222.231.22.1/32
   - IP-CIDR,24.105.30.129/32
-  - IP-CIDR,24.105.62.129
+  - IP-CIDR,24.105.62.129/32
   - IP-CIDR,54.207.104.145/32
   - IP-CIDR,54.207.107.12/32
   - IP-CIDR,54.94.196.47/32
