--- a/Rules_Provider/Integrate/OpenAI.yaml
+++ b/Rules_Provider/Integrate/OpenAI.yaml
@@ -1,9 +1,10 @@
 # > OpenAI
 # 总条数: 6条
 payload:
-  - DOMAIN,cdn.auth0.com
-  - DOMAIN,challenges.cloudflare.com
-  - DOMAIN,openaiapi-site.azureedge.net
+  - DOMAIN-KEYWORD,openai
   - DOMAIN-SUFFIX,ai.com
+  - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,identrust.com
-  - DOMAIN-SUFFIX,openai.com
+  - DOMAIN-SUFFIX,stripe.com
+  - DOMAIN,cdn.auth0.com
+  - DOMAIN,o33249.ingest.sentry.io
