--- a/MyConvert/MyRules.ini
+++ b/MyConvert/MyRules.ini
@@ -31,7 +31,7 @@ custom_proxy_group=Bilibili`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`
 
 custom_proxy_group=YouTube`select`[]GlobalMedia`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`(狮城|新加坡|SG|sg)
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
 custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy
 
