--- a/MyConvert/MyRules_YTOO.ini
+++ b/MyConvert/MyRules_YTOO.ini
@@ -27,7 +27,7 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`(香港|台灣)
+custom_proxy_group=Bilibili`select`[]DIRECT`(香港|台灣|台湾|HK|TW|澳门)
 
 custom_proxy_group=YouTube`select`[]GlobalMedia`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`.*
