Proxy 添加mediatek.com

--- a/Rules_Provider/Complete/Other/Proxy.yaml
+++ b/Rules_Provider/Complete/Other/Proxy.yaml
@@ -5718,6 +5718,7 @@ payload:
   - DOMAIN-SUFFIX,zhreader.com
   - DOMAIN-SUFFIX,zhuangbi.me
   - DOMAIN-SUFFIX,zhuanxing.cn
+  - DOMAIN-SUFFIX,mediatek.com
   - DOMAIN-SUFFIX,zhuatieba.com
   - DOMAIN-SUFFIX,zhuichaguoji.org
   - DOMAIN-SUFFIX,zi.media
