--- a/Rules_Provider/Complete/Other/Microsoft.yaml
+++ b/Rules_Provider/Complete/Other/Microsoft.yaml
@@ -1,5 +1,5 @@
 # > Microsoft
-# 总条数: 544条
+# 总条数: 641条
 payload:
   - DOMAIN-KEYWORD,1drv
   - DOMAIN-KEYWORD,microsoft
@@ -7,29 +7,51 @@ payload:
   - DOMAIN-KEYWORD,skydrive
   - DOMAIN-SUFFIX,1drv.com
   - DOMAIN-SUFFIX,1drv.ms
+  - DOMAIN-SUFFIX,21vbc.com
+  - DOMAIN-SUFFIX,21vbluecloud.com
+  - DOMAIN-SUFFIX,21vbluecloud.net
   - DOMAIN-SUFFIX,a-msedge.net
   - DOMAIN-SUFFIX,a1158.g.akamai.net
   - DOMAIN-SUFFIX,a122.dscg3.akamai.net
   - DOMAIN-SUFFIX,a767.dscg3.akamai.net
+  - DOMAIN-SUFFIX,aadrm.cn
   - DOMAIN-SUFFIX,aadrm.com
   - DOMAIN-SUFFIX,acompli.com
   - DOMAIN-SUFFIX,acompli.net
   - DOMAIN-SUFFIX,adaptivecards.io
+  - DOMAIN-SUFFIX,aggresmart.com
   - DOMAIN-SUFFIX,aicscience.com
   - DOMAIN-SUFFIX,aka.ms
   - DOMAIN-SUFFIX,akadns.net
   - DOMAIN-SUFFIX,ankarazirvesi2018.com
   - DOMAIN-SUFFIX,api-extractor.com
+  - DOMAIN-SUFFIX,apihub-internal.cn
   - DOMAIN-SUFFIX,apisof.net
   - DOMAIN-SUFFIX,appcenter.ms
   - DOMAIN-SUFFIX,applicationinsights.io
   - DOMAIN-SUFFIX,applicationinsights.net
+  - DOMAIN-SUFFIX,appserviceenvironment.cn
   - DOMAIN-SUFFIX,aria.ms
   - DOMAIN-SUFFIX,asp.net
   - DOMAIN-SUFFIX,aspnetcdn.com
   - DOMAIN-SUFFIX,assets-yammer.com
+  - DOMAIN-SUFFIX,azcrmc-test.cn
+  - DOMAIN-SUFFIX,azcrmc.cn
+  - DOMAIN-SUFFIX,azk8s.cn
+  - DOMAIN-SUFFIX,aznbcontent.cn
+  - DOMAIN-SUFFIX,aztask.cn
   - DOMAIN-SUFFIX,azure
+  - DOMAIN-SUFFIX,azure-api.cn
+  - DOMAIN-SUFFIX,azure-apihub.cn
   - DOMAIN-SUFFIX,azure-apim.net
+  - DOMAIN-SUFFIX,azure-automation.cn
+  - DOMAIN-SUFFIX,azure-connectedvehicles-stage.cn
+  - DOMAIN-SUFFIX,azure-connectedvehicles.cn
+  - DOMAIN-SUFFIX,azure-devices-int.net
+  - DOMAIN-SUFFIX,azure-devices-provisioning.cn
+  - DOMAIN-SUFFIX,azure-devices.cn
+  - DOMAIN-SUFFIX,azure-devices.net
+  - DOMAIN-SUFFIX,azure-dns.cn
   - DOMAIN-SUFFIX,azure-dns.com
   - DOMAIN-SUFFIX,azure-dns.info
   - DOMAIN-SUFFIX,azure-dns.net
@@ -41,11 +63,14 @@ payload:
   - DOMAIN-SUFFIX,azure.com
   - DOMAIN-SUFFIX,azure.net
   - DOMAIN-SUFFIX,azurecomcdn.net
+  - DOMAIN-SUFFIX,azurecomm.net
   - DOMAIN-SUFFIX,azurecontainer.io
   - DOMAIN-SUFFIX,azurecosmos.net
   - DOMAIN-SUFFIX,azurecosmosdb.com
   - DOMAIN-SUFFIX,azurecosmosdb.info
   - DOMAIN-SUFFIX,azurecosmosdb.net
+  - DOMAIN-SUFFIX,azurecr-test.cn
+  - DOMAIN-SUFFIX,azurecr.cn
   - DOMAIN-SUFFIX,azuredatabricks.net
   - DOMAIN-SUFFIX,azuredevopslaunch.com
   - DOMAIN-SUFFIX,azuredigitaltwin.com
@@ -57,17 +82,25 @@ payload:
   - DOMAIN-SUFFIX,azureedge.net
   - DOMAIN-SUFFIX,azurefd.net
   - DOMAIN-SUFFIX,azurefd.us
+  - DOMAIN-SUFFIX,azurehdinsight.cn
   - DOMAIN-SUFFIX,azureiotcentral.com
   - DOMAIN-SUFFIX,azureiotsolutions.com
+  - DOMAIN-SUFFIX,azureiotsuite.cn
   - DOMAIN-SUFFIX,azureiotsuite.com
+  - DOMAIN-SUFFIX,azuremresolver.cn
   - DOMAIN-SUFFIX,azureplanetscale.info
   - DOMAIN-SUFFIX,azureplanetscale.net
+  - DOMAIN-SUFFIX,azureprivatedns.cn
+  - DOMAIN-SUFFIX,azurerms.cn
   - DOMAIN-SUFFIX,azurerms.com
+  - DOMAIN-SUFFIX,azuresandbox.cn
   - DOMAIN-SUFFIX,azureserviceprofiler.com
   - DOMAIN-SUFFIX,azuresmartspaces.net
   - DOMAIN-SUFFIX,azurestackvalidation.com
   - DOMAIN-SUFFIX,azurewebsites.net
   - DOMAIN-SUFFIX,b.akamaiedge.net
+  - DOMAIN-SUFFIX,b2clogin.cn
+  - DOMAIN-SUFFIX,b3itech.cn
   - DOMAIN-SUFFIX,bbing.com
   - DOMAIN-SUFFIX,bibg.com
   - DOMAIN-SUFFIX,biing.com
@@ -101,6 +134,8 @@ payload:
   - DOMAIN-SUFFIX,biying.com
   - DOMAIN-SUFFIX,biying.com.cn
   - DOMAIN-SUFFIX,blazor.net
+  - DOMAIN-SUFFIX,blueaggrestore.com
+  - DOMAIN-SUFFIX,bluecloudprod.com
   - DOMAIN-SUFFIX,bluehatil.com
   - DOMAIN-SUFFIX,bluehatnights.com
   - DOMAIN-SUFFIX,boswp.com
@@ -108,9 +143,11 @@ payload:
   - DOMAIN-SUFFIX,brazilpartneruniversity.com
   - DOMAIN-SUFFIX,breakdown.me
   - DOMAIN-SUFFIX,c-msedge.net
+  - DOMAIN-SUFFIX,cegid-cloud.cn
   - DOMAIN-SUFFIX,centralvalidation.com
   - DOMAIN-SUFFIX,ch9.ms
   - DOMAIN-SUFFIX,charticulator.com
+  - DOMAIN-SUFFIX,chinacloud-mobile.cn
   - DOMAIN-SUFFIX,chinacloudapi.cn
   - DOMAIN-SUFFIX,chinacloudapp.cn
   - DOMAIN-SUFFIX,chinacloudsites.cn
@@ -131,9 +168,11 @@ payload:
   - DOMAIN-SUFFIX,devopsms.com
   - DOMAIN-SUFFIX,dictate.ms
   - DOMAIN-SUFFIX,discoverbing.com
+  - DOMAIN-SUFFIX,ditu.live.com
   - DOMAIN-SUFFIX,docs.com
   - DOMAIN-SUFFIX,dot.net
   - DOMAIN-SUFFIX,dwh5.com
+  - DOMAIN-SUFFIX,dynamics.cn
   - DOMAIN-SUFFIX,dynamics.com
   - DOMAIN-SUFFIX,e-msedge.net
   - DOMAIN-SUFFIX,edgesuite.net
@@ -160,6 +199,7 @@ payload:
   - DOMAIN-SUFFIX,gotcosmos.com
   - DOMAIN-SUFFIX,graphengine.io
   - DOMAIN-SUFFIX,groupme.com
+  - DOMAIN-SUFFIX,hdinsightservices.cn
   - DOMAIN-SUFFIX,helpshift.com
   - DOMAIN-SUFFIX,here.com
   - DOMAIN-SUFFIX,here.net
@@ -202,19 +242,27 @@ payload:
   - DOMAIN-SUFFIX,livetileedge.dsx.mp.microsoft.com.edgekey.net
   - DOMAIN-SUFFIX,livingyourambition.com
   - DOMAIN-SUFFIX,localytics.com
+  - DOMAIN-SUFFIX,lync.cn
   - DOMAIN-SUFFIX,lync.com
   - DOMAIN-SUFFIX,m12.vc
   - DOMAIN-SUFFIX,makecode.org
   - DOMAIN-SUFFIX,managedmeetingrooms.com
+  - DOMAIN-SUFFIX,management-azure-devices-int.net
+  - DOMAIN-SUFFIX,management-azure-devices-provisioning.cn
+  - DOMAIN-SUFFIX,management-azure-devices.cn
+  - DOMAIN-SUFFIX,management-azure-devices.net
   - DOMAIN-SUFFIX,mapblast.com
   - DOMAIN-SUFFIX,mappoint.com
   - DOMAIN-SUFFIX,masalladeloslimites.com
+  - DOMAIN-SUFFIX,mcchcdn.com
   - DOMAIN-SUFFIX,meetfasttrack.com
   - DOMAIN-SUFFIX,meetyourdevices.com
   - DOMAIN-SUFFIX,mepn.com
   - DOMAIN-SUFFIX,mesh.com
+  - DOMAIN-SUFFIX,mgmt-azure-api.cn
   - DOMAIN-SUFFIX,microbit.org
   - DOMAIN-SUFFIX,microsoft
+  - DOMAIN-SUFFIX,microsoft-falcon.io
   - DOMAIN-SUFFIX,microsoft-give.com
   - DOMAIN-SUFFIX,microsoft-int.com
   - DOMAIN-SUFFIX,microsoft-online.cn
@@ -270,7 +318,10 @@ payload:
   - DOMAIN-SUFFIX,microsoftadvertising.com
   - DOMAIN-SUFFIX,microsoftadvertisingregionalawards.com
   - DOMAIN-SUFFIX,microsoftaffiliates.com
+  - DOMAIN-SUFFIX,microsoftapp.net
   - DOMAIN-SUFFIX,microsoftazuread-sso.com
+  - DOMAIN-SUFFIX,microsoftazuresponsorships.com
+  - DOMAIN-SUFFIX,microsoftazurestatus.cn
   - DOMAIN-SUFFIX,microsoftcloud.com
   - DOMAIN-SUFFIX,microsoftcloudsummit.com
   - DOMAIN-SUFFIX,microsoftcloudworkshop.com
@@ -290,6 +341,7 @@ payload:
   - DOMAIN-SUFFIX,microsoftlatamaitour.com
   - DOMAIN-SUFFIX,microsoftlatamholiday.com
   - DOMAIN-SUFFIX,microsoftlinc.com
+  - DOMAIN-SUFFIX,microsoftmetrics.cn
   - DOMAIN-SUFFIX,microsoftmxfilantropia.com
   - DOMAIN-SUFFIX,microsoftnews.cc
   - DOMAIN-SUFFIX,microsoftnews.cn
@@ -304,8 +356,16 @@ payload:
   - DOMAIN-SUFFIX,microsoftnewskids.org
   - DOMAIN-SUFFIX,microsoftol.com
   - DOMAIN-SUFFIX,microsoftol.com.cn
+  - DOMAIN-SUFFIX,microsoftonline-i.cn
+  - DOMAIN-SUFFIX,microsoftonline-m-i.cn
+  - DOMAIN-SUFFIX,microsoftonline-m.cn
+  - DOMAIN-SUFFIX,microsoftonline-p-i.cn
+  - DOMAIN-SUFFIX,microsoftonline-p-i.net.cn
+  - DOMAIN-SUFFIX,microsoftonline-p.cn
   - DOMAIN-SUFFIX,microsoftonline-p.com
   - DOMAIN-SUFFIX,microsoftonline-p.net
+  - DOMAIN-SUFFIX,microsoftonline-p.net.cn
+  - DOMAIN-SUFFIX,microsoftonline.cn
   - DOMAIN-SUFFIX,microsoftonline.com
   - DOMAIN-SUFFIX,microsoftpartnercommunity.com
   - DOMAIN-SUFFIX,microsoftpartnersolutions.com
@@ -326,11 +386,13 @@ payload:
   - DOMAIN-SUFFIX,microsoftstream.com
   - DOMAIN-SUFFIX,microsoftteams.com
   - DOMAIN-SUFFIX,microsofttradein.com
+  - DOMAIN-SUFFIX,microsofttranslator-int.cn
   - DOMAIN-SUFFIX,microsofttranslator.com
   - DOMAIN-SUFFIX,microsoftusercontent.com
   - DOMAIN-SUFFIX,microsoftuwp.com
   - DOMAIN-SUFFIX,mmais.com.cn
   - DOMAIN-SUFFIX,mmdnn.com
+  - DOMAIN-SUFFIX,mncmsidlab1.cn
   - DOMAIN-SUFFIX,momentumms.com
   - DOMAIN-SUFFIX,mono-project.com
   - DOMAIN-SUFFIX,morphcharts.com
@@ -339,11 +401,14 @@ payload:
   - DOMAIN-SUFFIX,ms365surfaceoffer.com
   - DOMAIN-SUFFIX,msa.akadns6.net
   - DOMAIN-SUFFIX,msads.net
+  - DOMAIN-SUFFIX,msappproxy.cn
   - DOMAIN-SUFFIX,msappproxy.net
   - DOMAIN-SUFFIX,msauth.cn
   - DOMAIN-SUFFIX,msauth.net
+  - DOMAIN-SUFFIX,msauthimages.cn
   - DOMAIN-SUFFIX,msauthimages.net
   - DOMAIN-SUFFIX,mschallenge2018.com
+  - DOMAIN-SUFFIX,mschcdn.com
   - DOMAIN-SUFFIX,msdn.com
   - DOMAIN-SUFFIX,msecnd.net
   - DOMAIN-SUFFIX,msedge.net
@@ -351,14 +416,18 @@ payload:
   - DOMAIN-SUFFIX,msft.net
   - DOMAIN-SUFFIX,msftauth.cn
   - DOMAIN-SUFFIX,msftauth.net
+  - DOMAIN-SUFFIX,msftauthimages.cn
   - DOMAIN-SUFFIX,msftauthimages.net
   - DOMAIN-SUFFIX,msftcenterone.cn
+  - DOMAIN-SUFFIX,msftcloudes.cn
   - DOMAIN-SUFFIX,msftconnecttest.com
   - DOMAIN-SUFFIX,msfteducation.ca
   - DOMAIN-SUFFIX,msftidentity.com
   - DOMAIN-SUFFIX,msftnet.org
   - DOMAIN-SUFFIX,msgamesresearch.com
+  - DOMAIN-SUFFIX,msidentity.cn
   - DOMAIN-SUFFIX,msidentity.com
+  - DOMAIN-SUFFIX,msidlabpbmc.cn
   - DOMAIN-SUFFIX,msignitechina.com
   - DOMAIN-SUFFIX,msinnovationchallenge.com
   - DOMAIN-SUFFIX,msminico.cn
@@ -368,6 +437,7 @@ payload:
   - DOMAIN-SUFFIX,msn.com.cn
   - DOMAIN-SUFFIX,msn.com.nsatc.net
   - DOMAIN-SUFFIX,msn.com.tw
+  - DOMAIN-SUFFIX,msn.net
   - DOMAIN-SUFFIX,msnewskids.com
   - DOMAIN-SUFFIX,msnewskids.net
   - DOMAIN-SUFFIX,msnewskids.org
@@ -404,6 +474,8 @@ payload:
   - DOMAIN-SUFFIX,office
   - DOMAIN-SUFFIX,office.com
   - DOMAIN-SUFFIX,office.net
+  - DOMAIN-SUFFIX,office365-net.cn
+  - DOMAIN-SUFFIX,office365.cn
   - DOMAIN-SUFFIX,office365.com
   - DOMAIN-SUFFIX,office365love.com
   - DOMAIN-SUFFIX,office365tw.com
@@ -411,18 +483,22 @@ payload:
   - DOMAIN-SUFFIX,officedev.cn
   - DOMAIN-SUFFIX,officeplus.cn
   - DOMAIN-SUFFIX,officeppe.net
+  - DOMAIN-SUFFIX,officewebapps.cn
   - DOMAIN-SUFFIX,omniroot.com
+  - DOMAIN-SUFFIX,oneclient.sfx.ms
   - DOMAIN-SUFFIX,onecollector.cloudapp.aria
   - DOMAIN-SUFFIX,onedrive.co
   - DOMAIN-SUFFIX,onedrive.co.uk
   - DOMAIN-SUFFIX,onedrive.com
   - DOMAIN-SUFFIX,onedrive.eu
+  - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,onedrive.net
   - DOMAIN-SUFFIX,onedrive.org
   - DOMAIN-SUFFIX,onenote.com
   - DOMAIN-SUFFIX,onenote.net
   - DOMAIN-SUFFIX,onestore.ms
   - DOMAIN-SUFFIX,onmicrosoft.com
+  - DOMAIN-SUFFIX,onmschina.cn
   - DOMAIN-SUFFIX,opentranslatorstothings.org
   - DOMAIN-SUFFIX,opticsforthecloud.net
   - DOMAIN-SUFFIX,optimizely.com
@@ -434,13 +510,19 @@ payload:
   - DOMAIN-SUFFIX,outlookmobile.com
   - DOMAIN-SUFFIX,ovi.com.cn
   - DOMAIN-SUFFIX,passport.net
+  - DOMAIN-SUFFIX,pbiwebcontent.cn
   - DOMAIN-SUFFIX,phonefactor.net
+  - DOMAIN-SUFFIX,photos.live.com
   - DOMAIN-SUFFIX,pixapp.net
   - DOMAIN-SUFFIX,playfabapi.cn
   - DOMAIN-SUFFIX,playfabcn.com
   - DOMAIN-SUFFIX,poshtestgallery.com
+  - DOMAIN-SUFFIX,powerapps.cn
   - DOMAIN-SUFFIX,powerappscdn.net
+  - DOMAIN-SUFFIX,powerappsportals.cn
+  - DOMAIN-SUFFIX,powerautomate.cn
   - DOMAIN-SUFFIX,powerautomate.com
+  - DOMAIN-SUFFIX,powerbi.cn
   - DOMAIN-SUFFIX,powerbi.com
   - DOMAIN-SUFFIX,powershellgallery.com
   - DOMAIN-SUFFIX,prod-video-cms-rt-microsoft-com.akamaized.net
@@ -466,6 +548,7 @@ payload:
   - DOMAIN-SUFFIX,sharepoint.com
   - DOMAIN-SUFFIX,sharepointonline.com
   - DOMAIN-SUFFIX,signalr.net
+  - DOMAIN-SUFFIX,skydrive.wns.windows.com
   - DOMAIN-SUFFIX,skype
   - DOMAIN-SUFFIX,skype.com
   - DOMAIN-SUFFIX,skype.net
@@ -480,6 +563,8 @@ payload:
   - DOMAIN-SUFFIX,statics-marketingsites-eus-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-neu-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-wcus-ms-com.akamaized.net
+  - DOMAIN-SUFFIX,storage.live.com
+  - DOMAIN-SUFFIX,storage.msn.com
   - DOMAIN-SUFFIX,successwithteams.com
   - DOMAIN-SUFFIX,surface.com
   - DOMAIN-SUFFIX,svc.ms
@@ -489,16 +574,16 @@ payload:
   - DOMAIN-SUFFIX,syncshop.cn
   - DOMAIN-SUFFIX,sysinternals.com
   - DOMAIN-SUFFIX,tailwindtraders.com
-  - DOMAIN-SUFFIX,teams.cdn.live.net
-  - DOMAIN-SUFFIX,teams.live.com
-  - DOMAIN-SUFFIX,teams.microsoft.com
   - DOMAIN-SUFFIX,techhub.ms
   - DOMAIN-SUFFIX,tenor.com
   - DOMAIN-SUFFIX,tfsallin.net
   - DOMAIN-SUFFIX,timelinestoryteller.com
+  - DOMAIN-SUFFIX,trafficmanager.cn
   - DOMAIN-SUFFIX,trafficmanager.net
   - DOMAIN-SUFFIX,translatetheweb.com
+  - DOMAIN-SUFFIX,trustcenter.cn
   - DOMAIN-SUFFIX,tryfunctions.com
+  - DOMAIN-SUFFIX,unity3dcloud.cn
   - DOMAIN-SUFFIX,unlocklimitlesslearning.com
   - DOMAIN-SUFFIX,userpxt.io
   - DOMAIN-SUFFIX,uservoice.com
@@ -509,8 +594,18 @@ payload:
   - DOMAIN-SUFFIX,videoindexer.ai
   - DOMAIN-SUFFIX,vip5.afdorigin-prod-am02.afdogw.com
   - DOMAIN-SUFFIX,virtualearth.net
+  - DOMAIN-SUFFIX,visualstudio-staging.com
+  - DOMAIN-SUFFIX,visualstudio.co
+  - DOMAIN-SUFFIX,visualstudio.co.uk
+  - DOMAIN-SUFFIX,visualstudio.com
+  - DOMAIN-SUFFIX,visualstudio.eu
+  - DOMAIN-SUFFIX,visualstudio.net
   - DOMAIN-SUFFIX,vsallin.net
   - DOMAIN-SUFFIX,vsassets.io
+  - DOMAIN-SUFFIX,vscode-cdn.net
+  - DOMAIN-SUFFIX,vscode-unpkg.net
+  - DOMAIN-SUFFIX,vscode-webview.net
+  - DOMAIN-SUFFIX,vscode.dev
   - DOMAIN-SUFFIX,wbd.ms
   - DOMAIN-SUFFIX,what-fan.net
   - DOMAIN-SUFFIX,windows
@@ -522,6 +617,7 @@ payload:
   - DOMAIN-SUFFIX,windows8.hk
   - DOMAIN-SUFFIX,windowsazure.cn
   - DOMAIN-SUFFIX,windowsazure.com
+  - DOMAIN-SUFFIX,windowsazurestatus.cn
   - DOMAIN-SUFFIX,windowscommunity.net
   - DOMAIN-SUFFIX,windowslive.cn
   - DOMAIN-SUFFIX,windowsmarketplace.com
@@ -540,8 +636,9 @@ payload:
   - DOMAIN-SUFFIX,yammerusercontent.com
   - DOMAIN,edge.activity.windows.com
   - DOMAIN,edge.microsoft.com
+  - DOMAIN,github-cloud.s3.amazonaws.com
   - DOMAIN,iecvlist.microsoft.com
   - DOMAIN,msedge.api.cdp.microsoft.com
-  - DOMAIN,teams.events.data.microsoft.com
-  - PROCESS-NAME,onedrive
-  - PROCESS-NAME,onedriveupdater
+  - DOMAIN,vsmarketplacebadge.apphb.com
+  - PROCESS-NAME,OneDrive
+  - PROCESS-NAME,OneDriveUpdater
