--- a/Rules_Provider/Complete/Other/Developer.yaml
+++ b/Rules_Provider/Complete/Other/Developer.yaml
@@ -32,6 +32,7 @@ payload:
   - DOMAIN-SUFFIX,eclipse.org
   - DOMAIN-SUFFIX,elastic.co
   - DOMAIN-SUFFIX,elastic.com
+  - DOMAIN-SUFFIX,esm.run
   - DOMAIN-SUFFIX,fontawesome.com
   - DOMAIN-SUFFIX,foundationdb.org
   - DOMAIN-SUFFIX,gcr.io
@@ -82,6 +83,8 @@ payload:
   - DOMAIN-SUFFIX,jquery.com
   - DOMAIN-SUFFIX,jquerymobile.com
   - DOMAIN-SUFFIX,jqueryui.com
+  - DOMAIN-SUFFIX,jsdelivr.com
+  - DOMAIN-SUFFIX,jsdelivr.net
   - DOMAIN-SUFFIX,kotlinlang.org
   - DOMAIN-SUFFIX,macosforge.org
   - DOMAIN-SUFFIX,macosicons.com
