--- a/Rules_Provider/Complete/Other/Telegram.yaml
+++ b/Rules_Provider/Complete/Other/Telegram.yaml
@@ -26,6 +26,7 @@ payload:
   - IP-CIDR,149.154.160.0/20
   - IP-CIDR,5.28.195.163/32
   - IP-CIDR,5.28.195.205/32
+  - IP-CIDR,5.28.195.37/32
   - IP-CIDR,91.108.0.0/16
   - IP-CIDR6,2001:67c:4e8::/48
   - IP-CIDR6,2001:b28:f23c::/47
