更新部分流媒体

--- a/Rules_Provider/Complete/GlobalMedia/BBC.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/BBC.yaml
@@ -4,6 +4,7 @@ payload:
   - DOMAIN-KEYWORD,bbcfmt
   - DOMAIN-KEYWORD,uk-live
   - DOMAIN-SUFFIX,bbc
+  - DOMAIN-SUFFIX,bbc-reporting-api.app
   - DOMAIN-SUFFIX,bbc.co
   - DOMAIN-SUFFIX,bbc.co.uk
   - DOMAIN-SUFFIX,bbc.com
