--- a/Rules_Provider/Complete/GlobalMedia/Bahamut.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/Bahamut.yaml
@@ -7,4 +7,4 @@ payload:
   - DOMAIN-SUFFIX,gamer.com.tw
   - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,hinet.net
-  - DOMAIN-SUFFIX,viblast.co
+  - DOMAIN-SUFFIX,viblast.com
